# Wegent

./: .dockerignore  .env.defaults  .env.example  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  README.md  README_zh.md  docker-compose.e2e.yml  docker-compose.yml  start  start.sh
.codex/prompts/: plan.md  plan_to_issues_cvs.md
.github/workflows/: e2e-tests.yml  publish-image.yml
Update/: README.md
Update/1.6/: README.md  (+11 more)
backend/: .env.example  start.sh
docs/: README.md  TEST_SUMMARY.md
executor/: start.sh
frontend/: package.json
issues/: 2026-01-01_14-12-32-codex-shell-claude-code.csv  2026-01-02_14-48-37-conversation-status-display.csv  2026-01-02_15-54-24-pr-agent-secure-pr-flow.csv  2026-01-02_18-20-04-model-settings-models-probe.csv  2026-01-03_codex-event-stream-corner-cases.md  2026-01-03_frontend-task-status-only-three-states.md  2026-01-08_14-50-45-code-shell-resume-mode.csv
local_runner/: local-runner.example.toml  pyproject.toml
local_runner/local_runner/: codex_exec.py  config.py  git_ops.py  http_client.py  main.py
plan/: 2026-01-01_14-03-09-codex-shell-claude-code.md  2026-01-02_14-34-00-conversation-status-display.md  2026-01-02_18-13-24-model-settings-models-probe.md  2026-01-03_19-21-42-intranet-auto-deploy-after-publish-image.md  2026-01-04_20-31-47-codex-context-continuity.md  2026-01-06_16-11-39-code-shell-resume-mode.md  2026-01-13_00-00-00-local-runner-codex.md
scripts/: db-export.sh  db-import.sh  dev-host.sh  doc_audit.py  run-e2e-local.sh  sync-codex-prompts.ps1  sync-codex-prompts.sh
wegent-cli/: README.md
(+284 files in other folders)
